feat(basic): style

--- a/sections/basic/index.html
+++ b/sections/basic/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JAMstack</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main>
-    <h2>Hello on my JAMstack site!</h2>
+    <h2>Hello on my JAMstack website!</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores cupiditate est, eos vitae vel temporibus eaque culpa vero enim numquam.</p>
   </main>
 </body>
