feat(basic): add script

--- a/sections/basic/index.html
+++ b/sections/basic/index.html
@@ -10,6 +10,10 @@
   <main>
     <h2>Hello on my JAMstack website!</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores cupiditate est, eos vitae vel temporibus eaque culpa vero enim numquam.</p>
+    <p>Recently updated code projects:</p>
+    <div id="content">Loading ...</div>
   </main>
+  <script type='module' src="./main.js"></script>
+  <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 </html>
